--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "prettier": "1.19.1"
   },
   "dependencies": {
+    "axios": "^1.6.2",
+    "dotenv": "^16.3.1",
     "html-literal": "^1.1.0",
     "lodash": "^4.17.21",
     "navigo": "^8.11.1",
     "parcel": "^2.10.3",
+    "save": "^2.9.0",
     "yargs-parser": ">=13.1.2"
   }
 }
