--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint": "^8.4.1",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.3.1",
+    "jasmine": "^5.1.0",
     "node": "^16.13.1",
     "nodemon": "^3.0.2",
     "prettier": "1.19.1"
